# translation-service

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  database.py  main.py
app/controllers/: translation.py
app/models/: translation.py
app/repositories/: translation.py
app/schemas/: translation.py
app/services/: translation.py
app/static/js/: translation.js
app/templates/: index.html
